[DEV] Feat: Add jwt authentication

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,4 +27,13 @@ GOOGLE_SEARCH_ENGINE_ID=
 
 # OPEN AI
 OPEN_AI_API_KEY=
+
+# DATABASE
 SQLITE_DB_PATH=./sqlite.db
+SQLITE_INIT_DB_PATH=path/to/mysql.sql
+SQLITE_REINIT_DB=true
+
+# AUTHENTICATION
+AUTH_SECRET_KEY=somthingthatshouldbekeptsecret
+ACCESS_TOKEN_EXPIRE=15 # minutes
+REFRESH_TOKEN_EXPIRE=60 # minutes
