--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,45 +1,39 @@
 {
-    "name": "proj-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
-        "format": "prettier --write \"**/*.+(ts|tsx|js|jsx|json|css|md)\""
-    },
-    "dependencies": {
-        "@reduxjs/toolkit": "^1.9.7",
-        "@typescript-eslint/eslint-plugin": "^6.9.1",
-        "flowbite-react": "^0.6.4",
-        "next": "^15.1.4",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-redux": "^8.1.3"
-    },
-    "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "19.0.1",
-        "@types/react-dom": "19.0.1",
-        "@types/react-redux": "^7.1.29",
-        "autoprefixer": "^10.0.1",
-        "eslint": "^8.2.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-next": "15.0.4",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-import": "^2.25.3",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-prettier": "^5.0.1",
-        "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-react-hooks": "^4.3.0",
-        "postcss": "^8",
-        "prettier": "^3.0.3",
-        "tailwindcss": "^3.4.3",
-        "typescript": "^5"
-    },
-    "overrides": {
-        "@types/react": "19.0.1",
-        "@types/react-dom": "19.0.1"
-    }
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cookies-next": "^5.0.2",
+    "lucide-react": "^0.471.1",
+    "next": "14.2.16",
+    "next-auth": "^4.24.11",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.16"
+  }
 }
