[DEV] Doc: Add README.md and Dockerize all services

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,12 +10,13 @@ asttokens==3.0.0
 async-timeout==4.0.3
 attrs==24.3.0
 backcall==0.2.0
-beautifulsoup4==4.8.2
-beir==2.0.0
+bcrypt==4.2.1
+beautifulsoup4==4.12.3
 bitsandbytes==0.45.0
 bleach==6.2.0
 boto3==1.35.90
 botocore==1.35.90
+cachetools==5.5.0
 cbor==1.0.0
 certifi==2024.12.14
 chardet==3.0.4
@@ -35,7 +36,8 @@ dnspython==2.7.0
 docopt==0.6.2
 docx2txt==0.8
 ebcdic==1.1.1
-elasticsearch==7.9.1
+elastic-transport==8.17.0
+elasticsearch==8.17.0
 email_validator==2.2.0
 eval_type_backport==0.2.2
 exceptiongroup==1.2.2
@@ -49,12 +51,19 @@ filetype==1.2.0
 FlagEmbedding @ git+https://github.com/FlagOpen/FlagEmbedding.git@ff3c36a6661242f1e94b1d578f4e92d950fe33b0
 frozenlist==1.5.0
 fsspec==2024.3.1
+google-api-core==2.24.0
+google-api-python-client==2.156.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
 greenlet==3.1.1
 grpcio==1.67.1
 h11==0.14.0
 httpcore==1.0.7
+httplib2==0.22.0
 httpx==0.28.1
-huggingface-hub==0.24.0
+huggingface-hub==0.23.0
 idna==3.4
 ijson==3.3.0
 IMAPClient==2.1.0
@@ -95,6 +104,7 @@ llama-index-program-openai==0.3.1
 llama-index-question-gen-openai==0.3.0
 llama-index-readers-file==0.4.1
 llama-index-readers-llama-parse==0.4.0
+llama-index-tools-google==0.3.0
 llama-index-vector-stores-milvus==0.5.0
 llama-parse==0.5.19
 loguru==0.7.3
@@ -133,6 +143,7 @@ nvidia-cusparse-cu12==12.3.1.170
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+oauthlib==3.2.2
 olefile==0.47
 openai==1.58.1
 orjson==3.10.12
@@ -150,18 +161,25 @@ platformdirs==4.3.6
 polars==1.18.0
 prompt_toolkit==3.0.48
 propcache==0.2.1
+proto-plus==1.25.0
 protobuf==5.29.2
 psutil==6.1.0
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==18.1.0
 pyarrow-hotfix==0.6
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycryptodome==3.21.0
 pydantic==2.10.3
 pydantic_core==2.27.1
 Pygments==2.18.0
+PyJWT==2.10.1
 pymilvus==2.5.2
+pyparsing==3.2.1
 pypdf==5.1.0
+pysqlite3==0.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
@@ -174,9 +192,11 @@ pyzmq==26.2.0
 referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
 rpds-py==0.22.3
+rsa==4.9
 s3transfer==0.10.4
 safetensors==0.4.5
 scikit-learn==1.6.0
@@ -215,6 +235,7 @@ tzdata==2024.2
 tzlocal==5.2
 ujson==5.10.0
 unlzw3==0.2.3
+uritemplate==4.1.1
 urllib3==1.26.20
 uuid==1.30
 uvicorn==0.34.0
